--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                                     <input type="text" id="name" placeholder="Product Name" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <input type="number" id="price" step="0.01" placeholder="Precio del producto"
+                                    <input type="number" id="price"  placeholder="Precio del producto"
                                         class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <input type="number" id="year" min="1900" max="2021" step="1" placeholder="Año de compra"
+                                    <input type="number" id="price" placeholder="Empleado"
                                         class="form-control">
                                 </div>
                                 <input type="submit" value="GUARDAR" class="btn btn-primary btn-block">
